// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render ExpenseList with no message error 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ExpenseList
    expenses={Array []}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="list-header"
        >
          <div
            className="show-for-mobil"
          >
            Expenses
          </div>
          <div
            className="show-for-desktop"
          >
            Expense
          </div>
          <div
            className="show-for-desktop"
          >
            Amount
          </div>
        </div>,
        <div
          className="list-body"
        >
          <div
            className="list-item list-item__message"
          >
            <p>
              No Expense
            </p>
          </div>
        </div>,
      ],
      "className": "content-container",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="show-for-mobil"
            >
              Expenses
            </div>,
            <div
              className="show-for-desktop"
            >
              Expense
            </div>,
            <div
              className="show-for-desktop"
            >
              Amount
            </div>,
          ],
          "className": "list-header",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Expenses",
              "className": "show-for-mobil",
            },
            "ref": null,
            "rendered": "Expenses",
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Expense",
              "className": "show-for-desktop",
            },
            "ref": null,
            "rendered": "Expense",
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Amount",
              "className": "show-for-desktop",
            },
            "ref": null,
            "rendered": "Amount",
            "type": "div",
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="list-item list-item__message"
          >
            <p>
              No Expense
            </p>
          </div>,
          "className": "list-body",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <p>
              No Expense
            </p>,
            "className": "list-item list-item__message",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "No Expense",
            },
            "ref": null,
            "rendered": "No Expense",
            "type": "p",
          },
          "type": "div",
        },
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="list-header"
          >
            <div
              className="show-for-mobil"
            >
              Expenses
            </div>
            <div
              className="show-for-desktop"
            >
              Expense
            </div>
            <div
              className="show-for-desktop"
            >
              Amount
            </div>
          </div>,
          <div
            className="list-body"
          >
            <div
              className="list-item list-item__message"
            >
              <p>
                No Expense
              </p>
            </div>
          </div>,
        ],
        "className": "content-container",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="show-for-mobil"
              >
                Expenses
              </div>,
              <div
                className="show-for-desktop"
              >
                Expense
              </div>,
              <div
                className="show-for-desktop"
              >
                Amount
              </div>,
            ],
            "className": "list-header",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Expenses",
                "className": "show-for-mobil",
              },
              "ref": null,
              "rendered": "Expenses",
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Expense",
                "className": "show-for-desktop",
              },
              "ref": null,
              "rendered": "Expense",
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Amount",
                "className": "show-for-desktop",
              },
              "ref": null,
              "rendered": "Amount",
              "type": "div",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <div
              className="list-item list-item__message"
            >
              <p>
                No Expense
              </p>
            </div>,
            "className": "list-body",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <p>
                No Expense
              </p>,
              "className": "list-item list-item__message",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "No Expense",
              },
              "ref": null,
              "rendered": "No Expense",
              "type": "p",
            },
            "type": "div",
          },
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`should render expenselist with expenses 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ExpenseList
    expenses={
      Array [
        Object {
          "amount": 195,
          "createdAt": 0,
          "description": "Gum",
          "id": "1",
          "note": "",
        },
        Object {
          "amount": 19500,
          "createdAt": -259200000,
          "description": "Rent",
          "id": "2",
          "note": "",
        },
        Object {
          "amount": 200,
          "createdAt": 345600000,
          "description": "Credit Card",
          "id": "3",
          "note": "",
        },
      ]
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="list-header"
        >
          <div
            className="show-for-mobil"
          >
            Expenses
          </div>
          <div
            className="show-for-desktop"
          >
            Expense
          </div>
          <div
            className="show-for-desktop"
          >
            Amount
          </div>
        </div>,
        <div
          className="list-body"
        >
          <ExpenseListItem
            amount={195}
            createdAt={0}
            description="Gum"
            id="1"
            note=""
          />
          <ExpenseListItem
            amount={19500}
            createdAt={-259200000}
            description="Rent"
            id="2"
            note=""
          />
          <ExpenseListItem
            amount={200}
            createdAt={345600000}
            description="Credit Card"
            id="3"
            note=""
          />
        </div>,
      ],
      "className": "content-container",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="show-for-mobil"
            >
              Expenses
            </div>,
            <div
              className="show-for-desktop"
            >
              Expense
            </div>,
            <div
              className="show-for-desktop"
            >
              Amount
            </div>,
          ],
          "className": "list-header",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Expenses",
              "className": "show-for-mobil",
            },
            "ref": null,
            "rendered": "Expenses",
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Expense",
              "className": "show-for-desktop",
            },
            "ref": null,
            "rendered": "Expense",
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Amount",
              "className": "show-for-desktop",
            },
            "ref": null,
            "rendered": "Amount",
            "type": "div",
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <ExpenseListItem
              amount={195}
              createdAt={0}
              description="Gum"
              id="1"
              note=""
            />,
            <ExpenseListItem
              amount={19500}
              createdAt={-259200000}
              description="Rent"
              id="2"
              note=""
            />,
            <ExpenseListItem
              amount={200}
              createdAt={345600000}
              description="Credit Card"
              id="3"
              note=""
            />,
          ],
          "className": "list-body",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": "1",
            "nodeType": "function",
            "props": Object {
              "amount": 195,
              "createdAt": 0,
              "description": "Gum",
              "id": "1",
              "note": "",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "2",
            "nodeType": "function",
            "props": Object {
              "amount": 19500,
              "createdAt": -259200000,
              "description": "Rent",
              "id": "2",
              "note": "",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "3",
            "nodeType": "function",
            "props": Object {
              "amount": 200,
              "createdAt": 345600000,
              "description": "Credit Card",
              "id": "3",
              "note": "",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="list-header"
          >
            <div
              className="show-for-mobil"
            >
              Expenses
            </div>
            <div
              className="show-for-desktop"
            >
              Expense
            </div>
            <div
              className="show-for-desktop"
            >
              Amount
            </div>
          </div>,
          <div
            className="list-body"
          >
            <ExpenseListItem
              amount={195}
              createdAt={0}
              description="Gum"
              id="1"
              note=""
            />
            <ExpenseListItem
              amount={19500}
              createdAt={-259200000}
              description="Rent"
              id="2"
              note=""
            />
            <ExpenseListItem
              amount={200}
              createdAt={345600000}
              description="Credit Card"
              id="3"
              note=""
            />
          </div>,
        ],
        "className": "content-container",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="show-for-mobil"
              >
                Expenses
              </div>,
              <div
                className="show-for-desktop"
              >
                Expense
              </div>,
              <div
                className="show-for-desktop"
              >
                Amount
              </div>,
            ],
            "className": "list-header",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Expenses",
                "className": "show-for-mobil",
              },
              "ref": null,
              "rendered": "Expenses",
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Expense",
                "className": "show-for-desktop",
              },
              "ref": null,
              "rendered": "Expense",
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Amount",
                "className": "show-for-desktop",
              },
              "ref": null,
              "rendered": "Amount",
              "type": "div",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <ExpenseListItem
                amount={195}
                createdAt={0}
                description="Gum"
                id="1"
                note=""
              />,
              <ExpenseListItem
                amount={19500}
                createdAt={-259200000}
                description="Rent"
                id="2"
                note=""
              />,
              <ExpenseListItem
                amount={200}
                createdAt={345600000}
                description="Credit Card"
                id="3"
                note=""
              />,
            ],
            "className": "list-body",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": "1",
              "nodeType": "function",
              "props": Object {
                "amount": 195,
                "createdAt": 0,
                "description": "Gum",
                "id": "1",
                "note": "",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "2",
              "nodeType": "function",
              "props": Object {
                "amount": 19500,
                "createdAt": -259200000,
                "description": "Rent",
                "id": "2",
                "note": "",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "3",
              "nodeType": "function",
              "props": Object {
                "amount": 200,
                "createdAt": 345600000,
                "description": "Credit Card",
                "id": "3",
                "note": "",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
